--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: Official website for the Rotaract Club NITK Chapter.
 # Team names, titles and social links
 people:
 - name: Rtr. Danish Waseem 
-  pic: 1.PNG
+  pic: 1.png
   position: Director Club services
   social:
     - title: google
