--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: Official website for the Rotaract Club NITK Chapter.
 people:
 - name: Rtr. Danish Waseem 
   pic: 1.png
-  position: Director Club services
+  position: Convener
   social:
     - title: google
       url: mailto:danish.waseem@outlook.com
